// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton renders 1`] = `
.c1 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c0 {
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  background-color: transparent;
  color: #ffffff;
  font-size: 20px;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  text-decoration: none;
  font-family: inherit;
  font-weight: 700;
  line-height: 1.125;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  -webkit-transition: .125s box-shadow ease-out;
  transition: .125s box-shadow ease-out;
  box-shadow: 0 2px 12px rgba(0,0,0,0.125);
  border-radius: 9999px;
  border-width: 0;
  border-style: solid;
  box-shadow: none !important;
  line-height: 0 !important;
  border-radius: 4px;
}

.c0:hover,
.c0:focus {
  outline: 0;
  box-shadow: 0 2px 12px 2px rgba(0,0,0,0.125);
}

.c0:active {
  outline: 0;
  box-shadow: 0 4px 16px 2px rgba(0,0,0,0.125);
}

<button
  className="c0"
  color="white"
>
  <svg
    className="c1"
    color={undefined}
    fill="currentcolor"
    height={24}
    viewBox="0 0 24 24"
    width={24}
  >
    <path
      d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z "
    />
  </svg>
</button>
`;

exports[`IconButton renders with circle prop 1`] = `
.c1 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c0 {
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  background-color: transparent;
  color: #ffffff;
  font-size: 20px;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  text-decoration: none;
  font-family: inherit;
  font-weight: 700;
  line-height: 1.125;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  -webkit-transition: .125s box-shadow ease-out;
  transition: .125s box-shadow ease-out;
  box-shadow: 0 2px 12px rgba(0,0,0,0.125);
  border-radius: 9999px;
  border-width: 0;
  border-style: solid;
  box-shadow: none !important;
  line-height: 0 !important;
  padding: 8px;
}

.c0:hover,
.c0:focus {
  outline: 0;
  box-shadow: 0 2px 12px 2px rgba(0,0,0,0.125);
}

.c0:active {
  outline: 0;
  box-shadow: 0 4px 16px 2px rgba(0,0,0,0.125);
}

<button
  className="c0"
  color="white"
>
  <svg
    className="c1"
    color={undefined}
    fill="currentcolor"
    height={24}
    viewBox="0 0 24 24"
    width={24}
  >
    <path
      d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z "
    />
  </svg>
</button>
`;
